--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.2",
-    "nodemailer": "^6.9.7",
-    "socket.io": "^4.7.2"
+    "nodemailer": "^6.9.7"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
